--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A completely responsive social media website where you can post/view/comment/like/search lovely memories."
     />
 	<meta name="referrer" content="no-referrer-when-downgrade" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
